--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+.history
 
 # Runtime data
 pids
@@ -21,12 +17,8 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
-*.lcov
 
-# nyc test coverage
-.nyc_output
-
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
 # Bower dependency directory (https://bower.io/)
@@ -41,27 +33,16 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+storybook-static/
 
-# Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
-
-# TypeScript cache
-*.tsbuildinfo
+# TypeScript v1 declaration files
+#typings/
 
 # Optional npm cache directory
 .npm
 
 # Optional eslint cache
 .eslintcache
-
-# Optional stylelint cache
-.stylelintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
 
 # Optional REPL history
 .node_repl_history
@@ -72,59 +53,56 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
+# dotenv environment variables file
+.env.development
+.env.production
 .env.local
+.env
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
+# next.js build output
 .next
-out
 
-# Nuxt.js build / generate output
-.nuxt
+#Jest
+reports
+
+#production
+www/
+www/js
+www/css
+www/index.html
+platforms/
+plugins/
+build/
+*.swp
+.DS_Store
+Thumbs.db
 dist
 
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
+#Sublime
+*.sublime-project
+*.sublime-workspace
+*.sublime-grunt.cache
 
-# vuepress build output
-.vuepress/dist
-
-# vuepress v2.x temp and cache directory
-.temp
+#webstorm
+.idea/
+.idea/atlassian-ide-plugin.xml
+.idea/vcs.xml
+.idea/caroogo-api.iml
+.idea/*
+.idea/**/*
+.gradle
+local.properties
+*.iml
 .cache
 
-# Docusaurus cache and generated files
-.docusaurus
+#visual studio code
+.vscode
+.vscode/launch.json
+.vscode/settings.json
 
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
+#KEYS
+frontend/website/server.key
+frontend/website/server.cert
+*.cert
+*.key
+.idea/workspace.xml
