--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"rootDir": ".",
-		"target": "es5",
-		"lib": ["dom", "dom.iterable", "esnext"],
+		"target": "esnext",
+		"lib": ["es6", "es7", "es2017", "es2018", "dom", "es2019", "es2021"],
 		"allowJs": true,
 		"skipLibCheck": true,
 		"strict": true,
@@ -23,14 +23,14 @@
 			}
 		],
 		"paths": {
-			"@/models/*": ["models/*"],
-			"@/utils/*": ["services/*"],
-			"@/services/*": ["services/*"],
-			"@/lib/*": ["lib/*"]
+			"@/components/*": ["app/components/*"],
+			"@/models/*": ["app/models/*"],
+			"@/services/*": ["app/services/*"],
+			"@/lib/*": ["app/lib/*"]
 		},
 		"typeRoots": ["./types", "node_modules/@types"],
 		"types": ["node"]
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-	"exclude": ["node_modules", "**/*.test.ts"]
+	"exclude": ["node_modules", "**/*.test.ts", ".eslintrc.js", "next.config.js"]
 }
