--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
 		"lint": "npm run lint:code-style && npm run lint:style && npm run lint:formatting && npm run lint:next"
 	},
 	"dependencies": {
+		"@codemirror/lang-javascript": "^6.2.1",
 		"@supabase/ssr": "^0.0.10",
 		"@supabase/supabase-js": "^2.39.2",
+		"@uiw/codemirror-theme-dracula": "^4.21.21",
+		"@uiw/react-codemirror": "^4.21.21",
 		"next": "^14.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
