--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-  NEXT_PUBLIC_SUPABASE_URL=your-project-url
-  NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+  NEXT_PUBLIC_SUPABASE_URL=<SUBSTITUTE_SUPABASE_URL>
+  NEXT_PUBLIC_SUPABASE_ANON_KEY=<SUBSTITUTE_SUPABASE_ANON_KEY>
