--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@codemirror/lang-sql": "^6.5.5",
 		"@codemirror/lang-yaml": "^6.0.0",
 		"@codemirror/language": "^6.10.1",
+		"@supabase/auth-helpers-nextjs": "^0.9.0",
 		"@supabase/ssr": "^0.0.10",
 		"@supabase/supabase-js": "^2.39.2",
 		"@uiw/codemirror-theme-dracula": "^4.21.21",
