--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@supabase/supabase-js": "^2.39.2",
 		"@uiw/codemirror-theme-dracula": "^4.21.21",
 		"@uiw/react-codemirror": "^4.21.21",
+		"@vercel/analytics": "^1.2.1",
 		"next": "^14.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
