--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"@vercel/analytics": "^1.2.1",
 		"next": "^14.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
