--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
 		"prettier": "^3.1.1",
 		"stylelint": "^16.2.1",
 		"stylelint-config-standard": "^36.0.0",
-		"typescript": "^5"
+		"typescript": "5.3.3"
 	}
 }
