--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 		"next": "^14.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-markdown": "^9.0.1",
+		"rehype-raw": "^7.0.0",
+		"remark-gfm": "^4.0.0",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
