--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"@codemirror/lang-yaml": "^6.0.0",
 		"@codemirror/language": "^6.10.1",
 		"@supabase/auth-helpers-nextjs": "^0.9.0",
-		"@supabase/ssr": "^0.7.0",
+		"@supabase/ssr": "^0.7.0-rc.2",
 		"@supabase/supabase-js": "^2.39.2",
 		"@uiw/codemirror-theme-dracula": "^4.21.21",
 		"@uiw/react-codemirror": "^4.21.21",
